--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,21 @@ services:
   db:
     # Keep same as AWS Aurora Postgres
     image: postgres:9.6.3
+  migrator:
+    build: .
+    command: python3 manage.py migrate
+    volumes:
+      - .:/code
+    ports:
+      - "8801:8000"
+    depends_on:
+      - db
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
-      - "8000:8000"
+      - "8800:8000"
     depends_on:
-      - db
+      - migrator
